# monorep

./: .dockerignore  .gitignore  BACKEND.md  Cargo.toml  Dockerfile  Dockerfile.dev  Makefile  README.md  docker-compose.dev.yaml  docker-compose.yaml  postman_collection.Backend.json
.github/actions/: release.yaml  setup.yaml
.github/workflows/: build_libs.yaml  docker_build.yaml  release.yaml
adapters/ethereum/: Cargo.toml
adapters/ethereum/src/: lib.rs
backend/: Dockerfile  package.json
backend/src/: app.controller.ts  app.module.ts  user.ts
ceremonies/: Cargo.toml
ceremonies/src/: lib.rs
ceremonies/src/ecdsa/: keygen.rs  mod.rs  sign.rs
cli/: Cargo.toml
cli/src/: keygen.rs  lib.rs  sign.rs
manager/: Cargo.toml
manager/src/: amqp.rs  config.rs  keygen.rs  main.rs  secrets.rs  sign.rs  util.rs
relay/: Cargo.toml  Dockerfile.dev
relay/src/: main.rs
signer/: Cargo.toml
signer/src/: keygen.rs  lib.rs  sign.rs
tss/: Cargo.toml
tss-ffi/: Cargo.toml
tss-ffi/src/: messages.rs
tss-nodejs/: .gitignore  Cargo.toml  index.d.ts  index.js  package.json  test-keygen.js  test-sign.js
tss-nodejs/src/: keygen.rs  sign.rs
tss/src/: blame.rs  errors.rs  lib.rs  party_i.rs  test.rs
tss/src/ecdsa/: blame.rs  errors.rs  mod.rs  party_i.rs  test.rs
tss/src/ecdsa/state_machine/: keygen.rs  sign.rs
tss/src/ecdsa/state_machine/keygen/: rounds.rs
tss/src/ecdsa/state_machine/sign/: fmt.rs  rounds.rs
tss/src/ecdsa/utilities/mta/: mod.rs  range_proofs.rs  test.rs
tss/src/ecdsa/utilities/zk_pdl/: mod.rs  test.rs
tss/src/ecdsa/utilities/zk_pdl_with_slack/: mod.rs  test.rs
tss/src/eddsa/: errors.rs
tss/src/state_machine/: keygen.rs  sign.rs
tss/src/state_machine/keygen/: rounds.rs
tss/src/state_machine/sign/: rounds.rs
tss/src/utilities/mta/: mod.rs
