[package]
name = "tss_ceremonies"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [ "ecdsa", "eddsa", "bls", "gmp" ]
ecdsa = []
bls = []
eddsa = []
bigint = ["curv-kzen/num-bigint", "tss/bigint" ]
gmp = ["curv-kzen/rust-gmp-kzen", "tss/gmp" ]


[lib]
crate-type = ["lib"]

[dependencies]
anyhow = "1"
curv-kzen = { version = "0.9", default-features = false }
derive_more = "0.99.17"
futures = "0.3"
round-based = { version = "0.1.4", features = ["dev"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
tokio = { version = "1", default-features = false, features = ["rt", "rt-multi-thread", "macros", "fs", "io-util" ] }
tss = { path = "../tss", default_features = false  }