[package]
name = "tss_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", default-features = false, features = ["rt", "rt-multi-thread", "macros", "fs", "io-util" ] }
structopt = "0.3"

tookey-libtss = { version = "1.0", default-features = false, features = ["gmp"] }

[[bin]]
name = "sign"
path = "src/sign.rs"

[[bin]]
name = "keygen"
path = "src/keygen.rs"
