[package]
name = "manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tss_ffi = { path = "../tss-ffi" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
tokio = { version = "1", default-features = false, features = ["rt", "rt-multi-thread", "macros"] }

anyhow = "^1.0.66"
log = "^0.4"
pretty_env_logger = "^0.4.0"

# RabbitMQ
bb8 = "^0.8.0"
bb8-lapin = "^0.4.0"

# Ceremony
async-sse = "5"
curv-kzen = { version = "0.9", default-features = false }
ethereum-types = { version = "0.12.1" }
round-based = { version = "0.1.4", features = ["dev"] }
structopt = "0.3"
surf = "2"
tss = { path = "../tss", default_features = false }
tss_ceremonies = { path = "../ceremonies", default_features = false, features = [ 'ecdsa' ] }
