[package]
name = "manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
tokio = { version = "1", default-features = false, features = ["rt", "rt-multi-thread", "macros"] }
tokio-stream = "0.1.11"
hex = "0.4.3"

anyhow = "^1.0.66"
log = "^0.4"
pretty_env_logger = "^0.4.0"

# AMQP
bb8 = "^0.8.0"
bb8-lapin = "^0.4.0"

# Hashicorp Vault
vaultrs = "=0.6.0"

tookey-libtss = { version = "1.2.1", default-features = false, features = ["gmp", "noop"] }
# [dependencies.tookey-libtss]
# path = "../../libtss"
# default-features = false
# features = ["gmp", "noop"]
