[package]
name = "tss"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib"]

[features]
default = ["gmp"]
bigint = ["curv-kzen/num-bigint"]
gmp = ["curv-kzen/rust-gmp-kzen"]

[dependencies]
subtle = { version = "2" }
serde = { version = "1.0", features = ["derive"] }
zeroize = "1"
curv-kzen = { version = "0.9", default-features = false }
centipede = { version = "0.3", default-features = false }
zk-paillier = { version = "0.4.3", default-features = false }
round-based = { version = "0.1.4", features = [] }
thiserror = "1.0.23"
derivative = "2"
sha2 = "0.9"


[dependencies.paillier]
version = "0.4.2"
package = "kzen-paillier"
default-features = false