[package]
name = "tookey_adapter_ethereum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib"]

[dependencies]
anyhow = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
web3 = { version = "0.18.0", default_features = false }

tookey-libtss = { version = "1.0", default-features = false, features = ["gmp"] }
